# test123

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
GPW/: requirements.txt
GPW/static/: script.js  styles.css
GPW/templates/: about.html  contact.html  home.html  index.html  services.html
gpw/: app.py
gpw/static/: script.js  styles.css
gpw/templates/: home.html  index.html  services.html
templates/: about.html  contact.html
