[tool.poetry]
name = "gpw"
version = "0.1.0"
description = ""
authors = ["faisalgh <faisalgh06@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
langchain-gpt4o = "^0.1.0"  # Change this line to use GPT-4o

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"